--- a/ansible/roles/citrix-vda/tasks/main.yml
+++ b/ansible/roles/citrix-vda/tasks/main.yml
@@ -46,9 +46,15 @@
     msg: "{{ citrix_username }}"
 
 - name: Download Citrix VDA
-  win_powershell: 
+  ansible.windows.win_powershell: 
     script: C:\Download\Citrix\Get-CTXBinary.ps1
-    arguments: -DownloadPath C:\Download\Citrix\ -MyCitrixUsername "{{ citrix_username }}" -MyCitrixPassword "{{ citrix_password }}" -VDAVersion latest -VDAType workstation -CitrixEULAAccept $true
+    arguments:
+      - DownloadPath: C:\Download\Citrix\ 
+      - MyCitrixUsername: "{{ citrix_username }}" 
+      - MyCitrixPassword: "{{ citrix_password }}" 
+      - VDAVersion: latest 
+      - VDAType: workstation 
+      - CitrixEULAAccept: $true
   register: citrix_download
 
 - name: Debug Citrix download
