Trying anohter way

--- a/ansible/roles/citrix-vda/tasks/main.yml
+++ b/ansible/roles/citrix-vda/tasks/main.yml
@@ -46,14 +46,7 @@
     msg: "{{ citrix_username }}"
 
 - name: Download Citrix VDA
-  ansible.windows.win_powershell: 
-    script: C:\Download\Citrix\Get-CTXBinary.ps1
-    arguments:
-      - DownloadPath: C:\Download\Citrix\ 
-      - MyCitrixUsername: "{{ citrix_username }}" 
-      - MyCitrixPassword: "{{ citrix_password }}" 
-      - VDAVersion: latest 
-      - VDAType: workstation 
+  win_shell: C:\Download\Citrix\Get-CTXBinary.ps1 -DownloadPath C:\Download\Citrix\ -MyCitrixUsername "{{ citrix_username }}" -MyCitrixPassword "{{ citrix_password }}" -VDAVersion latest -VDAType server 
   register: citrix_download
 
 - name: Debug Citrix download
