Added correct cloud connectors, still hard coded but have to look into that at a later stage

--- a/.devops/pipelines/azure/image.yml
+++ b/.devops/pipelines/azure/image.yml
@@ -72,6 +72,7 @@ jobs:
         script: |
           export citrix_username="${{ parameters.citrix_username }}"
           export citrix_password="${{ parameters.citrix_password }}"
+          export environment="${{ lower(parameters.environment) }}"
 
           packer build -var-file=azure.pkrvars.hcl .
         workingDirectory: '$(Build.Repository.LocalPath)/packer/azure'
