--- a/ansible/roles/citrix-vda/tasks/main.yml
+++ b/ansible/roles/citrix-vda/tasks/main.yml
@@ -1,6 +1,15 @@
 ---
 - name: Built the environment dictonary and variables
   set_fact:
+    environment: "{{ lookup('env', 'environment') | lower }}"
+    environments:
+        default: "pois" 
+        cards:   "card"
+        flowers: "flow"
+
+- name: Built the environment dictonary and variables
+  set_fact:
+    environment_short: "{{environments[environment | lower]}}"
     citrix_username: "{{ lookup('env', 'citrix_username') }}"
     citrix_password: "{{ lookup('env', 'citrix_password') }}"
 
@@ -18,14 +27,6 @@
   win_package:
     path: https://go.microsoft.com/fwlink/?linkid=2088631
     arguments: /q /norestart
-
-# - name: Install Windows Server Features - Shared Desktops
-#   win_feature:
-#     name:
-#     - RDS-RD-Server
-#     - Server-Media-Foundation
-#     - Remote-Assistance
-#     state: present
 
 - name: Reboot to complete Windows Feature installation
   win_reboot:
@@ -57,7 +58,7 @@
   win_package:
     chdir: C:\Download\Citrix
     path: "{{ citrix_download.stdout | trim }}"
-    arguments: /components VDA /controllers `"$($env:CitrixDeliveryControllers)`" /disableexperiencemetrics /enable_hdx_ports /enable_hdx_udp_ports /enable_real_time_transport /enable_remote_assistance /enable_ss_ports /exclude `"Citrix Telemetry Service`",`"Citrix Personalization for App-V - VDA`",`"Citrix Files for Windows`",`"Citrix Files for Outlook`",`"User personalization layer`",`"Citrix WEM Agent`",`"Citrix VDA Upgrade Agent`" /includeadditional `"Citrix MCS IODriver`" /masterimage /noreboot /quiet
+    arguments: /components VDA /controllers `"{{ environment_short }}-cc-1, {{ environment_short }}-cc-2`" /disableexperiencemetrics /enable_hdx_ports /enable_hdx_udp_ports /enable_real_time_transport /enable_remote_assistance /enable_ss_ports /exclude `"Citrix Telemetry Service`",`"Citrix Personalization for App-V - VDA`",`"Citrix Files for Windows`",`"Citrix Files for Outlook`",`"User personalization layer`",`"Citrix WEM Agent`",`"Citrix VDA Upgrade Agent`" /includeadditional `"Citrix MCS IODriver`" /masterimage /noreboot /quiet
     state: present
     expected_return_code: [0, 3, 3010]
   register: vda_install
