--- a/ansible/roles/citrix-optimizer/tasks/main.yml
+++ b/ansible/roles/citrix-optimizer/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Built the environment dictonary and variables
+  set_fact:
+    citrix_username: "{{ lookup('env', 'citrix_username') }}"
+    citrix_password: "{{ lookup('env', 'citrix_password') }}"
+
 - name: Create directory structure
   win_file:
     path: C:\Download\Citrix
