Multi image build again

--- a/.devops/pipelines/azure-install.yml
+++ b/.devops/pipelines/azure-install.yml
@@ -105,6 +105,7 @@ stages:
   jobs:
   - template: azure/image.yml
     parameters:
+      job: avd
       azure_client_id: $(azure_client_id)
       azure_client_secret: $(azure_client_secret)
       azure_subscription_id: $(azure_subscription_id)
@@ -113,6 +114,21 @@ stages:
       citrix_username: $(citrix_username)
       citrix_password: $(citrix_password)
       environment: ${{ parameters.azureWorkspace }}
+      image: Windows10-21h2-avd
+      version: $(Build.BuildNumber)
+
+  - template: azure/image.yml
+    parameters:
+      job: citrix
+      azure_client_id: $(azure_client_id)
+      azure_client_secret: $(azure_client_secret)
+      azure_subscription_id: $(azure_subscription_id)
+      azure_tenant_id: $(azure_tenant_id)
+      azure_region: ${{ parameters.azureRegion }}
+      citrix_username: $(citrix_username)
+      citrix_password: $(citrix_password)
+      environment: ${{ parameters.azureWorkspace }}
+      image: Windows10-21h2-citrix
       version: $(Build.BuildNumber)
 
 - stage: ansible_cvads
