--- a/.devops/pipelines/azure/image.yml
+++ b/.devops/pipelines/azure/image.yml
@@ -11,10 +11,16 @@ parameters:
 - name: azure_tenant_id
   type: string
 
+- name: job
+  type: string
+
 - name: azure_region
   type: string
 
 - name: environment
+  type: string
+
+- name: image
   type: string
 
 - name: version
@@ -27,8 +33,8 @@ parameters:
   type: string
 
 jobs:
-  - job: buildImage
-    displayName: Building image
+  - job: buildImage_${{parameters.job}}
+    displayName: Building image 
 
     steps:
     - script: |
@@ -54,6 +60,8 @@ jobs:
 
           $packerVariable += "environment=`"${{ lower(parameters.environment) }}`""
           $packerVariable += "BuildSourcesDirectory=`"$(Build.SourcesDirectory)`""
+
+          $packerVariable += "image_name=`"${{ parameters.image }}`""
           $packerVariable += "image_version=`"${{ parameters.version }}`""
           Set-Content -Value $packerVariable -Path azure.pkrvars.hcl -Force
         workingDirectory: '$(Build.Repository.LocalPath)/packer/azure'
@@ -78,6 +86,7 @@ jobs:
           export citrix_username="${{ parameters.citrix_username }}"
           export citrix_password="${{ parameters.citrix_password }}"
           export environment="${{ lower(parameters.environment) }}"
+          export delivery=${{ parameters.job }}
 
           packer build -var-file=azure.pkrvars.hcl .
         workingDirectory: '$(Build.Repository.LocalPath)/packer/azure'
