Check for Citrix agent based on env variable

--- a/ansible/windows-image.yml
+++ b/ansible/windows-image.yml
@@ -11,6 +11,9 @@
 - name: Packer Worker Playbook
   hosts: all
   roles:
-  - microsoft365apps
-  - citrix-optimizer
-  - bis-f
+  - role: citrix-vda
+    when: ansible_facts['env'].delivery == 'citrix'
+    
+  - role: microsoft365apps
+
+  - role: citrix-optimizer
