--- a/ansible/windows-image.yml
+++ b/ansible/windows-image.yml
@@ -8,25 +8,12 @@
 # ╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╭━╯┃
 # ╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╱╰━━╯
 
-- name: Packer localhost
-- hosts: localhost
-  connection: local
-  tasks:
-  - name: Print all available facts
-    ansible.builtin.debug:
-      var: ansible_facts
-      
 - name: Packer Worker Playbook
   hosts: all
-  tasks:
-  - name: Print all available facts
-    ansible.builtin.debug:
-      var: ansible_facts
-      
   roles:
   - role: citrix-vda
-    when: ansible_facts['env'].delivery == 'citrix'
-    
+    when: lookup('env', 'environment') == 'citrix' 
+   
   - role: microsoft365apps
 
   - role: citrix-optimizer
