--- a/ansible/windows-image.yml
+++ b/ansible/windows-image.yml
@@ -11,6 +11,9 @@
 - name: Packer Worker Playbook
   hosts: all
   roles:
+  - role: nvidia-driver
+    when: lookup('env', 'vgpu') == 'true' 
+    
   - role: citrix-vda
     when: lookup('env', 'delivery') == 'citrix' 
    
