Added the condition for Citrix DaaS

--- a/.devops/pipelines/azure-install.yml
+++ b/.devops/pipelines/azure-install.yml
@@ -137,6 +137,7 @@ stages:
   displayName: Citrix DaaS deployment
   
   pool: ${{ parameters.azureEnvironment }}-${{ lower(parameters.azureWorkspace) }}
+  condition: eq(parameters,azureDelivery, 'Citrix Virtual Apps & Desktop Services')
   
   dependsOn: ansible_domain
 
