Now in the correct way

--- a/.devops/pipelines/azure-install.yml
+++ b/.devops/pipelines/azure-install.yml
@@ -137,7 +137,8 @@ stages:
   displayName: Citrix DaaS deployment
   
   pool: ${{ parameters.azureEnvironment }}-${{ lower(parameters.azureWorkspace) }}
-  condition: eq(parameters,azureDelivery, 'Citrix Virtual Apps & Desktop Services')
+ 
+  condition: eq('${{ parameters,azureDelivery }}', 'Citrix Virtual Apps & Desktop Services')
   
   dependsOn: ansible_domain
 
