Force teams install

--- a/ansible/roles/microsoft365apps/tasks/main.yml
+++ b/ansible/roles/microsoft365apps/tasks/main.yml
@@ -43,3 +43,16 @@
     name: AcceptAllEulas
     data: 1
     type: dword
+
+
+- name: Microsoft Teams System installer
+  win_regedit:
+    path: HKLM:\Software\Microsoft\Teams
+    name: IsWVDEnvironment
+    data: 1
+    type: dword
+
+- name: Install Microsoft Teams system
+  win_package:
+    path: https://statics.teams.cdn.office.net/production-windows-x64/1.5.00.11865/Teams_windows_x64.msi
+    arguments: /qn ALLUSER=1 ALLUSERS=1
