Updated packer part in the container

--- a/docker/devops-agent/dockerfile
+++ b/docker/devops-agent/dockerfile
@@ -51,9 +51,9 @@ RUN apt install --fix-broken
 RUN apt-get install -y powershell
 
 # Hasicorp Packer
-RUN curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+RUN curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add -
 RUN apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-RUN sudo apt-get update && apt-get install packer
+RUN apt-get update && apt-get install packer
 
 # Hasicorp Terraform
 RUN apt-get update && apt-get install terraform
