Not sure if Powershell is working in the container

--- a/.devops/pipelines/vmware/infra.yml
+++ b/.devops/pipelines/vmware/infra.yml
@@ -22,7 +22,7 @@ jobs:
         script: |
 
           $variables = @()
-          $variables += "common_iso_datastore=`"$(common_iso_datastore)`""
+          # $variables += "common_iso_datastore=`"$(common_iso_datastore)`""
 
           $variables += "domain_admin=`"$(build_username)`""
           $variables += "domain_admin_password=`"$(build_password)`""
