Add missing parameter

--- a/.devops/pipelines/vmware.yml
+++ b/.devops/pipelines/vmware.yml
@@ -34,6 +34,7 @@ stages:
   jobs:
   - template: vmware/domain.yml
     parameters:
+      ansible_playbook: domain.yml
       variable_group: VMware
 
 
