Minor adjustment to get this going

--- a/ansible/domain.yml
+++ b/ansible/domain.yml
@@ -1,14 +1,14 @@
 ---
-- hosts: localhost
-  connection: local
-  gather_facts: yes
-  collections:
-    - azure.azcollection
+# - hosts: localhost
+#   connection: local
+#   gather_facts: yes
+#   collections:
+#     - azure.azcollection
 
-  tasks:
-  - name: Start the Azure Key Vault actions
-    include_tasks: azure-keyvault.yml
-  when: lookup('env', 'azure') == 'true' 
+#   tasks:
+#   - name: Start the Azure Key Vault actions
+#     include_tasks: azure-keyvault.yml
+#   when: lookup('env', 'azure') == 'true' 
 
 - name: Domain Controller
   hosts: dc
