Restore the backend to store the state file

--- a/.devops/pipelines/vmware/domain.yml
+++ b/.devops/pipelines/vmware/domain.yml
@@ -5,6 +5,9 @@ parameters:
 - name: ansible_playbook
   type: string
 
+- name: azure_backend
+  type: string
+
 jobs:
   - job: ansible
     displayName: Configure infrastructure
@@ -22,6 +25,12 @@ jobs:
       displayName: Terraform download
       inputs:
         terraformVersion: 'latest'
+
+    - task: DownloadSecureFile@1
+      displayName: Download backend configuration
+      name: backend
+      inputs:
+        secureFile: ${{ parameters.azure_backend }}
 
     - task: PowerShell@2
       displayName: Terraform variables
