--- a/.devops/pipelines/vmware/infra-dc.yml
+++ b/.devops/pipelines/vmware/infra-dc.yml
@@ -5,9 +5,6 @@ parameters:
 - name: variable_group
   type: string
 
-- name: azure_backend
-  type: string
-
 jobs:
   - job: buildInfra
     displayName: Building infrastructure
@@ -25,7 +22,7 @@ jobs:
       displayName: Download backend configuration
       name: backend
       inputs:
-        secureFile: ${{ parameters.azure_backend }}
+        secureFile: $(azure_backend)
 
     - task: PowerShell@2
       displayName: Terraform variables
