--- a/.devops/pipelines/vmware/infra.yml
+++ b/.devops/pipelines/vmware/infra.yml
@@ -5,8 +5,6 @@ parameters:
 - name: variable_group
   type: string
 
-- name: azure_backend
-  type: string
 
 jobs:
   - job: buildInfra
@@ -25,7 +23,7 @@ jobs:
       displayName: Download backend configuration
       name: backend
       inputs:
-        secureFile: ${{ parameters.azure_backend }}
+        secureFile: $(azure_backend)
 
     - task: PowerShell@2
       displayName: Terraform variables
