--- a/.devops/pipelines/vmware/domain.yml
+++ b/.devops/pipelines/vmware/domain.yml
@@ -88,8 +88,8 @@ jobs:
       displayName: 'Ansible version'
 
     - script: |  
-        export ansible_user="$(vsphere_username)"
-        export ansible_password="$(vsphere_password)"
+        export ANSIBLE_USER="$(vsphere_username)"
+        export ANSIBLE_PASSWORD="$(vsphere_password)"
 
-        ansible-playbook $(Build.Repository.LocalPath)/ansible/${{ parameters.ansible_playbook }} -i $(Build.Repository.LocalPath)/ansible/inventory
+        ansible-playbook $(Build.Repository.LocalPath)/ansible/${{ parameters.ansible_playbook }} -i $(Build.Repository.LocalPath)/ansible/inventory -e ansible_password='{{ lookup("env", "ANSIBLE_PASSWORD") }}'
       displayName: 'Execute ansible'
